  * Support for Pimoroni 128x128 OLED SH1107 (issue 803)
  * Support for Grove 128x128 OLED SH1107 (issue 877)
  * Support for Winstar 256x128 ST75256 (ST75256_WO256X128, issue 891)
  * Bugfix: Open Iconic 1x for U8x8 (issue 828)
  * Added sendF command for direct communication with the display (issues 822, 878, 896)
  * Support for CG160160 UC1611 (issue 884)
  * Support for LM6063 128x64 ST7565  (issue 893)
  * Added fonts from pentacom (issue 810)
  * Support for ST7511 (issue 876)
  * Support for SSD1316 132x32 (issue 919)
  * Support for ST75320 (issue 921)
  * Added JLX256160M for mirrored version of the JLX256160 display (issue 930)
  * Unifont update to 12.1.02, added several plane 1 fonts (issue 931)
  * bdfconv.exe: Windows exe created, bugfix with -d option (issue 833)
2020-01-27	v2.27.6	olikraus@gmail.com
  * Support for IST7920 (issue 999). Note: IST7920 has nothing todo with ST7920
  * Added screenshot/screencapture for full buffer mode (issue 1005)
      See: https://github.com/olikraus/u8g2/wiki/u8g2reference#writebufferpbm
  * Bugfix for draw 1x2 and 2x2 procedures for big 8x8 fonts (issue 1054)
  * Added fast software SPI support for Arduino Nano Every (issue 987)
  * Added "LoadFromSD" example to demonstrate reading XBM binary from SD card (issue #1059)
  * Added png to XBM binary conversion tool (https://github.com/olikraus/u8g2/tree/master/tools/png2bin)
  * Support for SSD1306 72x40 (issue 1047)
  * Bugfix for print() and setFontDirection() (issue 963)
  * Support for Visionox SSD1327 128x96 OLED (issue 1090)
  * Support for Open-Smart ST7567 128x64 LCD (issue 1088)
  * Added Lucida X11 fonts (issue 271)
  * Added several fonts from dafont.com (issue 1093)
  * Added 3-wire HW SPI (issue 1041)
2020-xx-xx	v2.28.x	olikraus@gmail.com
  * Added support for ST7528 (issue 986) 
  * Added support for UC1617 JLX128128 (issue 1151)
  * Added support for Raystar SSD1305 (issue 1111)
  * Added support for KS0713 controller (issue 1314)
  